<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/ic_menu_characters"
            android:title="@string/nav_characters" />
        <item
            android:id="@+id/nav_comics"
            android:icon="@drawable/ic_menu_comics"
            android:title="@string/nav_comics" />
        <item
            android:id="@+id/nav_creators"
            android:icon="@drawable/ic_menu_creators"
            android:title="@string/nav_creators" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_events"
            android:title="@string/nav_events" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/ic_menu_series"
            android:title="@string/nav_series" />
        <item
            android:id="@+id/nav_stories"
            android:icon="@drawable/ic_menu_stories"
            android:title="@string/nav_stories" />
    </group>

    <item android:title="@string/nav_options">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/nav_exit" />
        </menu>
    </item>

</menu>
